--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
 <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
 <!-- endbower -->
 <!-- endbuild -->
-
+<script src="https://cdn.socket.io/socket.io-1.4.5.js"></script>
 <!-- build:js({.tmp,app}) scripts/scripts.js -->
 <script src="/scripts/app.js"></script>
 <script src="/scripts/controllers/main.js"></script>
